Fix bar chart resizing on mobile devices & cut labels too long in bar chart
Apparently on mobile devices window emits resize event when browser navigation is hidden
so if device's width is small, I make it to not resize dinamically,
and it doesn't need to as it pretty much changes only when orientation changes

--- a/src/client/sass/index.scss
+++ b/src/client/sass/index.scss
@@ -100,6 +100,7 @@ $orange: rgb(255, 84, 31);
       
       &:hover {
           background-color: rgba(37, 132, 142, 0.4);
+          color: black;
           cursor: pointer;
       }
   }
